--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the anonymizer package.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "probability-distributions": "^0.9.1"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
   }
 }
