--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "anonymizer",
+  "name": "value-anonymizer",
   "version": "1.0.0",
-  "description": "This is the anonymizer package.",
+  "description": "Provides anonymization functions to generalize data, add noise and hash data.",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
+  "keywords": [
+    "anonymization",
+    "generalization",
+    "data"
+  ],
   "repository": {
     "type": "git",
     "url": "git@git.tu-berlin.de:my-awesome-group/anonymizer.git"
@@ -19,5 +24,6 @@
   },
   "devDependencies": {
     "jest": "^27.0.6"
-  }
+  },
+  "homepage": "https://git.tu-berlin.de/my-awesome-group/anonymizer"
 }
